@@ -1,4 +1,4 @@
 # DO NOT MERGE INTO TRUNK
-RELEASE=.0b11
+RELEASE=.0b12
 BRANCH=1.1
 TRUNK=
