@@ -81,6 +81,11 @@ Firebug 1.1 is Firebug 1.05 by Joe Hewitt with additions by John J. Barton and M
     ** Issue 218: disabled-firebug panel acts up
     ** Issue 302: throw in console
     ** Issue 342: debugger breaks on disabled breakpoints
+    ** Issue 408: contributed bg locale added
+    ** Issue 383: contributed tr locale added
+    ** Issue 343: nsISupports is not defined on firebug-service.js
+    ** Issue 105: Turning off Network Monitoring also turns of XMLHttpRequest monitoring
+    
 
 === General ===
 * Supports Firefox 3
